components/minio/002-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/instance: minio-operator
    app.kubernetes.io/name: operator
    name: console
    operators.coreos.com/minio-operator.minio-operator: ""
  name: console
  namespace: minio-operator
spec:
  host: console-minio-operator.apps.sno.shanehomelab.com
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: console
    weight: 100
  wildcardPolicy: None
